<resources>
    <string name="app_name">SwissTournament2</string>


    <string name="cadence">Cadence</string>
    <string name="freestyle_tournament">FreeStyle Tournament</string>
    <string name="nom_tournois">Nom Tournois</string>
    <string name="nvx_tournois">CREER TOURNOIS</string>
    <string name="enregistrer_joueur">Enregistrer joueur</string>
    <string name="creerjoueur">+</string>
    <string name="creer_nvx_tournois">Creer NVX Tournois</string>
    <string name="manches">Manches</string>
    <string name="_2">2</string>
    <string name="tournoisEnCours">Tournois En Cours</string>
    <string name="tournoisTerminer">Tournois Terminer</string>
    <string name="classementGeneral">Classement General</string>
    <string name="manche_suivante">MANCHE SUIVANTE</string>
    <string name="tournois_num">TOURNOIS NUM</string>
    <string name="home">HOME</string>
    <string name="retour_manches">retour Manches</string>
    <string name="_1_x">1/x</string>
    <string name="manchename">MancheName</string>
    <string-array name="spinner_tournois_cadence">
        <item></item>
        <item>3 | 2</item>
        <item>5 | 0</item>
        <item>5 | 3</item>
        <item>10| 0</item>
        <item>10| 5</item>
    </string-array>
</resources>