<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/match_en_cour"
    android:padding="16dp"
    tools:context=".MatchEncourMancheX">
    <Button
        android:id="@+id/ManchesTournois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="5dp"
        android:text="@string/retour_manches"
        app:layout_constraintTop_toTopOf="@+id/MancheNumero"
        app:layout_constraintBottom_toBottomOf="@+id/MancheNumero">

    </Button>
    <TextView
        android:id="@+id/MancheNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/manches"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ManchesTournois"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/LayoutMatchenCour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/MancheNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/NextRoundBTN" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:background="#172A6CDF">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/matchList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/NextRoundBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/manche_suivante"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutMatchenCour"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>